# tg2sip-webrtc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build-debian.sh  tg2sip.conf
.github/workflows/: deb-packages.yml
.github/workflows-disabled/: main.yml.needs-rewrite
buildenv/: build-clang-libcxx-deps.sh  ntgcalls_resolv_stubs.c  prepare.sh  rename-webrtc-libsrtp-symbols.sh  rename-webrtc-openssl-symbols.sh  tg2sip-gendb.desktop  tg2sip-webrtc.desktop
debian/: changelog  control  copyright  gen_db.1  rules  tg2sip-gendb.1  tg2sip-webrtc.1  tg2sip-webrtc.dirs  tg2sip-webrtc.install  tg2sip-webrtc.lintian-overrides  tg2sip-webrtc.manpages  tg2sip-webrtc.postinst  tg2sip-webrtc.postrm  tg2sip-webrtc.tg2sip-webrtc.service
include/boost/: sml.hpp
patches/: 0001-tg2sip-drop-h264-ffmpeg7-incompatible.patch  0001-tg2sip-fix-h264-ffmpeg7-incompatible.patch  0001-tg2sip-ntgcalls-add_subdirectory-fixes.patch  0002-tg2sip-dont-advertise-video-support.patch  0002-tg2sip-ntgcalls-missing-includes.patch  0003-tg2sip-ntgcalls-fix-audio-incoming-enable-check.patch  README.md
tg2sip/: gateway.cpp  gateway.h  gen_db.cpp  logging.cpp  main.cpp  queue.h  settings.cpp  settings.h  tg.cpp  tg.h  utils.cpp  utils.h
tg2sip/voip/: audio_bridge.cpp  audio_bridge.h  controller.cpp  controller.h  ntgcalls_runtime.cpp  ntgcalls_runtime.h  ring_buffer.h
